deployments/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: golang-demo-ping
spec:
  revisionHistoryLimit: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 5
      maxUnavailable: 0
  replicas: 1
  selector:
    matchLabels:
      app: golang-demo-ping
  template:
    metadata:
      labels:
        app: golang-demo-ping
      annotations:
        apm.datadoghq.com/env: '{ "DD_ENV": "prod", "DD_SERVICE": "golang-demo-ping"}'
        ad.datadoghq.com/app.logs: '[{}]'
    spec:
      terminationGracePeriodSeconds: 30
      containers:
        - name: app
          image: asia-docker.pkg.dev/dtamura-service01/containers/golang-demo-ping:v0.0.1
          ports:
            - containerPort: 3000
          readinessProbe:
            initialDelaySeconds: 5
            periodSeconds: 3
            failureThreshold: 5
            httpGet:
              path: /healthz
              port: 3000
              scheme: HTTP
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 100m
              memory: 200Mi
            limits:
              cpu: 100m
              memory: 200Mi
