deployments/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: golang-demo-ping
spec:
  type: NodePort
  selector:
    app: golang-demo-ping
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 3000
