deployments/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: golang-demo-ingress
  annotations:
    networking.gke.io/managed-certificates: golang-demo-mc
    networking.gke.io/v1beta1.FrontendConfig: golang-demo-frontendconfig
    kubernetes.io/ingress.allow-http: "false"
spec:
  defaultBackend:
    service:
      name: golang-demo-ping
      port:
        number: 80
  rules:
    - host: golang-demo.gcp.dtamura.com
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: golang-demo-ping
                port:
                  number: 80
